use real array data in graph. add stats for fps

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	</head>
 	<body>
     <div id="container"></div>
-    <div id="ui">
-      <button onclick="setCameraPosition()">Sup</button>
-    </div>
+    <div id="ui"></div>
+		<script src="js/Brexit-GBPUSD-ARRAY.js"></script>
 		<script src="js/three.js"></script>
+		<script src="js/stats.min.js"></script>
     <script src="js/OrbitControls.js"></script>
 		<script src="js/main.js"></script>
 	</body>
