improve graph fn, add functionality to create multiple graphs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 	<body>
     <div id="container"></div>
     <div id="ui"></div>
-		<script src="js/Brexit-GBPUSD-ARRAY.js"></script>
+
+		<script src="js/data/Brexit-GBPUSD-ARRAY.js"></script>
+		<script src="js/data/Brexit-UK10YearYield-ARRAY.js"></script>
+		<script src="js/data/Brexit-USDGBP-ARRAY.js"></script>
+		<script src="js/data/Brexit-VIX-ARRAY.js"></script>
+		<script src="js/data/test.js"></script>
+
 		<script src="js/three.js"></script>
 		<script src="js/stats.min.js"></script>
     <script src="js/OrbitControls.js"></script>
