--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     	<button onclick="setupGraphsForStory(DATA_OIL);">Oil</button>
     </div>
 		<div id="ui-right">
-			<button onclick="setCameraPosition(POSITION_2D);">2D Camera</button>
-			<button onclick="setCameraPosition(POSITION_3D);">3D Camera</button>
+			<button onclick="animateCameraPosition(POSITION_2D);">2D Camera</button>
+			<button onclick="animateCameraPosition(POSITION_3D);">3D Camera</button>
 		</div>
 
 		<script src="js/data/brexit/Brexit-GBPUSD-ARRAY.js"></script>
@@ -44,7 +44,7 @@
 
 		<script src="js/three.js"></script>
 		<script src="js/stats.min.js"></script>
-    <script src="js/OrbitControls.js"></script>
+		<script src="js/OrbitControls.js"></script>
 		<script src="js/Tween.js"></script>
 		<script src="js/main.js"></script>
 	</body>
