add oil datasets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset=utf-8>
-		<title>demo Three.js app</title>
+		<title>Three.js Dataviz Prototype</title>
 		<style>
 			body { margin: 0; overflow: hidden; }
       #container { position: absolute; }
@@ -36,7 +36,8 @@
 		<script src="js/data/monetary/MonetaryPolicy-FederalReserve.js"></script>
 		<script src="js/data/monetary/MonetaryPolicy-USFederalFunds.js"></script>
 		<script src="js/data/monetary/MonetaryPolicy-USUnemployment.js"></script>
-		<script src="js/data/oil/Oil.js"></script>
+		<script src="js/data/oil/OPEC-Total.js"></script>
+		<script src="js/data/oil/Total-Non-OPEC.js"></script>
 		<script src="js/data/china/ChinaHousingData-CTRB.js"></script>
 		<script src="js/data/china/ChinaHousingData-GDP.js"></script>
 
