add labels per story, w/ adaptable grid. TODO cleanup docs

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<body>
     <div id="container"></div>
     <div id="ui-left">
-    	<button onclick="setupGraphsForStory(DATA_BREXIT);">Brexit</button>
-    	<button onclick="setupGraphsForStory(DATA_HOUSING);">Housing</button>
-    	<button onclick="setupGraphsForStory(DATA_MONETARY);">Monetary</button>
-			<button onclick="setupGraphsForStory(DATA_CHINA);">China</button>
-    	<button onclick="setupGraphsForStory(DATA_OIL);">Oil</button>
+    	<button onclick="setupGraphsForStory(DATA_BREXIT, LABELS_BREXIT);">Brexit</button>
+    	<button onclick="setupGraphsForStory(DATA_HOUSING, LABELS_HOUSING);">Housing</button>
+    	<button onclick="setupGraphsForStory(DATA_MONETARY, LABELS_MONETARY);">Monetary</button>
+			<button onclick="setupGraphsForStory(DATA_CHINA, LABELS_CHINA);">China</button>
+    	<button onclick="setupGraphsForStory(DATA_OIL, LABELS_OIL);">Oil</button>
     </div>
 		<div id="ui-right">
 			<button onclick="animateCameraPosition(POSITION_2D);">2D Camera</button>
