updated datasets + labels. rm 2nd y axis labels.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 		<script src="js/data/monetary/MonetaryPolicy-USFederalFunds.js"></script>
 		<script src="js/data/monetary/MonetaryPolicy-USUnemployment.js"></script>
 		<script src="js/data/oil/MSCIEmergingMarketsIndex.js"></script>
+		<script src="js/data/oil/OPEC-Total.js"></script>
+		<script src="js/data/oil/Total-Non-OPEC.js"></script>
+		<script src="js/data/oil/brent-crude-oil.js"></script>
+		<script src="js/data/china/china-cny.js"></script>
+		<script src="js/data/china/china-shanghai.js"></script>
+		<script src="js/data/china/china-sp500.js"></script>
 		<script src="js/data/china/ChinaHousingData-GDP.js"></script>
 
 
