--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
       #container { position: absolute; }
 			#ui-left { position: absolute; bottom: 0; left: 0;}
 			#ui-right { position: absolute; bottom: 0; right: 0;}
+			#legend { position: absolute; top: 0; right: 0; display: flex; background: rgba(255,255,255, 0.35); }
+			.legend__item { font-family: 'Arial'; margin: 10px; display: flex; }
+			.legend__circle { border-radius: 50%; width: 18px; height: 18px; margin: 0 5px; }
 			canvas { width: 100%; height: 100% }
 		</style>
 	</head>
 	<body>
     <div id="container"></div>
     <div id="ui-left">
-    	<button onclick="setupGraphsForStory(DATA_BREXIT, LABELS_BREXIT);">Brexit</button>
-    	<button onclick="setupGraphsForStory(DATA_HOUSING, LABELS_HOUSING);">Housing</button>
-    	<button onclick="setupGraphsForStory(DATA_MONETARY, LABELS_MONETARY);">Monetary</button>
-			<button onclick="setupGraphsForStory(DATA_CHINA, LABELS_CHINA);">China</button>
-    	<button onclick="setupGraphsForStory(DATA_OIL, LABELS_OIL);">Oil</button>
+		<button onclick="setupGraphsForStory(DATA_BREXIT, LABELS_BREXIT, LEGEND_BREXIT);">Brexit</button>
+		<button onclick="setupGraphsForStory(DATA_HOUSING, LABELS_HOUSING, LEGEND_HOUSING);">Housing</button>
+		<button onclick="setupGraphsForStory(DATA_MONETARY, LABELS_MONETARY, LEGEND_MONETARY);">Monetary</button>
+		<button onclick="setupGraphsForStory(DATA_CHINA, LABELS_CHINA, LEGEND_CHINA);">China</button>
+		<button onclick="setupGraphsForStory(DATA_OIL, LABELS_OIL, LEGEND_OIL);">Oil</button>
     </div>
 		<div id="ui-right">
 			<button onclick="animateCameraPosition(POSITION_2D);">2D Camera</button>
 			<button onclick="animateCameraPosition(POSITION_3D);">3D Camera</button>
 		</div>
+		<div id="legend"></div>
 
 		<script src="js/data/brexit/Brexit-GBPUSD-ARRAY.js"></script>
 		<script src="js/data/brexit/Brexit-UK10YearYield-ARRAY.js"></script>
@@ -52,6 +56,7 @@
 		<script src="js/stats.min.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/Tween.js"></script>
+		<script src="js/jquery-3.1.1.slim.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
